[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'rae'
version = '0.9.2'
description = 'Consulta el diccionario de la RAE'
readme = 'README.md'
license-files = ['LICENSE']
authors = [{name = 'Ángel Carmona Galán'}]
license = {text = 'MIT'}
requires-python = '>=3.9'
dependencies = ['requests', 'beautifulsoup4']

classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Software Development :: Libraries',
    'Environment :: Web Environment',
    'Natural Language :: Spanish'
]

[project.urls]
Homepage = 'https://github.com/angelcarmona/rae'
